--- a/views/layout.pug
+++ b/views/layout.pug
@@ -23,7 +23,7 @@ html
               span(class="icon-bar")
               span(class="icon-bar")
               span(class="icon-bar")
-            a(class="navbar-brand" id="logo" href="/") Reddicktech
+            a(class="navbar-brand" id="logo" href="/") Tyquan Reddick
           div(class="collapse navbar-collapse" id="bs-example-navbar-collapse-1")
             ul(class="nav navbar-nav")
               li(role="presentation")
