--- a/views/admin/messages/incomingmessages.pug
+++ b/views/admin/messages/incomingmessages.pug
@@ -1,26 +1,21 @@
 extends ../../layout
 
 block content
-  include ../nav.pug
-  div(class="container")
-    div(class="row")
-      div(class="col-xs-12")
-        h1(class="text-center") Incoming Messages
-    br
-    br
-    div("table-responsive")
-      table(class="table table-bordered table-striped table-hover table-condensed")
-        tr
-        each message in messages
+  div(id="adminBg")
+    include ../nav.pug
+    div(class="container")
+      div(class="row")
+        div(class="col-xs-12")
+          h1(class="text-center") Incoming Messages
+      br
+      br
+      div("table-responsive")
+        table(class="table table-bordered table-striped table-hover table-condensed")
           tr
-            td
-              a(href="/admin/showmessage/" + message.id)= message.firstName
-                span= message.lastName
-            td= message.inquiry
-            td= message.date_created
-            
-            
-            
-            
-            
-            
+          each message in messages
+            tr
+              td
+                a(href="/admin/showmessage/" + message.id)= message.firstName
+                  span= message.lastName
+              td= message.inquiry
+              td= message.date_created
