--- a/views/admin/messages/showmessage.pug
+++ b/views/admin/messages/showmessage.pug
@@ -1,31 +1,32 @@
 extends ../../layout
 
 block content
-  include ../nav.pug
-  div(id="marg")
-  div(class="container")
-    if (user)
-      div(class="row")
-        div(class="col-md-12")
-          h3 Subject: 
-            span=user.inquiry
-      div(class="row")
-        div(class="col-md-6")
-          h4(id="man")
-            span(id="man")=user.firstName 
-            span(id="man")=user.lastName 
-            span(id="man")
-              a(href="#")=user.email
-        div(class="col-md-6")
-          h4
-            span=user.date_created
-      br
-      div(class="row")
-        div(class="col-md-12")
-          p=user.message
-      br
-      div(class="row")
-        div(class="col-md-12")
-          a(href="/admin/email/" + user.id) Reply
-    else
-      h1(class="text-center") No Message Added Yet
+  div(id="adminBg")
+    include ../nav.pug
+    div(id="marg")
+    div(class="container")
+      if (user)
+        div(class="row")
+          div(class="col-md-12")
+            h3 Subject: 
+              span=user.inquiry
+        div(class="row")
+          div(class="col-md-6")
+            h4(id="man")
+              span(id="man")=user.firstName 
+              span(id="man")=user.lastName 
+              span(id="man")
+                a(href="#")=user.email
+          div(class="col-md-6")
+            h4
+              span=user.date_created
+        br
+        div(class="row")
+          div(class="col-md-12")
+            p=user.message
+        br
+        div(class="row")
+          div(class="col-md-12")
+            a(href="/admin/email/" + user.id) Reply
+      else
+        h1(class="text-center") No Message Added Yet
