--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,33 +5,34 @@ html
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     title= title
-    link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css", rel="stylesheet")
+    link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous")
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
     link(href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet")
     link(href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet") 
     link(rel='stylesheet', href='/stylesheets/style.css')
-    script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js")
+    script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous")
+    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous")
     script(src="/js/stats.js")
-    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous")
   body
+    nav(class="navbar navbar-expand-lg" id="nav")
+      div(class="container")
+        a(class="navbar-brand" id="logo" href="/") Tyquan Reddick
+          button(class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
+          span(class="navbar-toggler-icon")
+        div(class="collapse navbar-collapse" id="navbarSupportedContent")
+          ul(class="navbar-nav mr-auto")
+              li(class="nav-item")
+                a(class="nav-link" href="/" id="logo")
+                  h5 Home
+              li(class="nav-item")
+                a(class="nav-link" href="/static/allcourses" id="logo")
+                  h5 Courses
+              li(class="nav-item")
+                a(class="nav-link" href="/static/allprojects" id="logo")
+                  h5 Projects
+              li(class="nav-item")
+                a(class="nav-link" href="/messages/contact" id="logo")
+                  h5 Contact Me
     div(id="container")
-      nav(class="navbar navbar-default navbar-fixed-top" id="nav")
-        div(class="container")
-          div(class="navbar-header")
-            button(type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false")
-              span(class="sr-only")
-              span(class="icon-bar")
-              span(class="icon-bar")
-              span(class="icon-bar")
-            a(class="navbar-brand" id="logo" href="/") Tyquan Reddick
-          div(class="collapse navbar-collapse" id="bs-example-navbar-collapse-1")
-            ul(class="nav navbar-nav")
-              li(role="presentation")
-                a(href="/") Home
-              li(role="presentation")
-                a(href="/static/allcourses") Courses
-              li(role="presentation")
-                a(href="/static/allprojects") Projects
-              li(role="presentation")
-                a(href="/messages/contact") Contact Me
       block content
