--- a/views/admin/nav.pug
+++ b/views/admin/nav.pug
@@ -1,17 +1,20 @@
-div(id="marg")
 div(class="container")
   div(class="row")
     div(class="col-xs-12")
       ul(class="nav nav-tabs")
-        li(role="presentation") 
-          a(href="/admin/dashboard") Dashboard
-        li(role="presentation")
-          a(href="/admin/allusers") Users
-        li(role="presentation")
-          a(href="/admin/office") Office
-        li(role="presentation")
-          a(href="/admin/allcourses") Courses
-        li(role="presentation")
-          a(href="/admin/allprojects") Projects
-        li(role="presentation")
-          a(href="/admin/incomingmessages") Messages
+        li(class="nav-item") 
+          a(class="nav-link" href="/admin/dashboard") Dashboard
+        li(class="nav-item")
+          a(class="nav-link" href="/admin/allusers") Users
+        li(class="nav-item")
+          a(class="nav-link" href="/admin/office") Office
+        li(class="nav-item")
+          a(class="nav-link" href="/admin/allcourses") Courses
+        li(class="nav-item")
+          a(class="nav-link" href="/admin/allprojects") Projects
+        li(class="nav-item")
+          a(class="nav-link" href="/admin/allservices") Services
+        li(class="nav-item")
+          a(class="nav-link" href="/admin/allblogs") Blogs
+        li(class="nav-item")
+          a(class="nav-link" href="/admin/incomingmessages") Messages
