--- a/views/layout.pug
+++ b/views/layout.pug
@@ -26,11 +26,17 @@ html
                 a(class="nav-link" href="/" id="logo")
                   h5 Home
               li(class="nav-item")
+                a(class="nav-link" href="/static/allservices" id="logo")
+                  h5 Services
+              li(class="nav-item")
                 a(class="nav-link" href="/static/allcourses" id="logo")
                   h5 Courses
               li(class="nav-item")
                 a(class="nav-link" href="/static/allprojects" id="logo")
                   h5 Projects
+              li(class="nav-item")
+                a(class="nav-link" href="/static/allblogs" id="logo")
+                  h5 Blog
               li(class="nav-item")
                 a(class="nav-link" href="/messages/contact" id="logo")
                   h5 Contact Me
