--- a/views/static/courses.pug
+++ b/views/static/courses.pug
@@ -4,11 +4,12 @@ block content
   div(id="marg")
   div(class="container")
     div(class="row")
-      div(class="col-xs-12")
+      div(class="col")
         h2(class="text-center") Private Online Video Training Available!
         br
-        h4(class="text-center") Thanks to the creators of Teamviewer and FaceTime.
-        h4(class="text-center") Reddicktech now offers video training sessions for all courses provided.
+        h4(class="text-center") Thanks to the creators of 
+          a(href="https://www.teamviewer.us/") Teamviewer
+        h4(class="text-center") I now offer video training sessions for all courses provided.
   br
   div(class="container")
     hr
