--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -162,12 +162,13 @@ a {
     margin-top: 20px;
   }
   #content-container {
-    margin-bottom: 40px;
+    padding: 1%;
     width: 100%;
     margin: 0 auto;
     height: 100%;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    color: black;
   }
   #text {
     font-size: 1.1em;
@@ -208,7 +209,8 @@ a {
 
 /* Tablet View */
 @media screen and (min-width: 760px) {
-  #main-bg {
+  #adminmarg {
+    margin-top: 50px;
   }
   #bg-stuff {
     padding-top: 550px;
