--- a/views/static/blogs.pug
+++ b/views/static/blogs.pug
@@ -1,16 +1,15 @@
 extends ../layout
 
 block content
-  div(id="content-container")
+  div(id="marg")
+  div(class="container")
     div(class="row")
       if (blogs.length > 0)
         each blog in blogs
-          div(class="col-md-3")
-            a(href="/static/showblog/" + blog.id)
+          div(class="col-md-2")
+            a(href=blog.linkUrl target="_blank")
               center
-                img(src=blog.imageUrl class="img-responsive")
+                img(src=blog.imageUrl id="serviceImage")
               h3(class="text-center" id="text")= blog.title
-              p(class="text-center")
-                small= blog.category
       else
         h1(class="text-center") No Blogs Added Yet
