--- a/views/static/contact.pug
+++ b/views/static/contact.pug
@@ -36,7 +36,7 @@ block content
         div(class="col-md-6")
           div(class="row")
             div(class="col-sm-4")
-              img(src="/images/profile.jpg" class="img-responsive")
+              img(src="/images/profile.jpg" class="img-fluid")
             div(class="col-sm-8")
               h2
                 u Tyquan Reddick
@@ -60,5 +60,5 @@ block content
                 a(href="https://www.youtube.com/channel/UCJlAkRDaMAMS5Mlr3125ZWA")
                   i(class="fa fa-youtube" aria-hidden="true") 
           div(class="row")
-            div(class="col-xs-12")
+            div(class="col")
               iframe(src="https://www.youtube.com/embed/XO6SV0Mup1E" allowfullscreen="" width="100%" height="225" frameborder="0")
