--- a/views/static/contact.pug
+++ b/views/static/contact.pug
@@ -1,7 +1,7 @@
 extends ../layout
 
 block content
-  div(id="marg")
+  div(id="adminmarg")
     div(id="form-container")
       div(class="row")
         div(class="col-md-12")
@@ -42,8 +42,6 @@ block content
                 u Tyquan Reddick
               h3 Certified Javascript, Python and MongDB Developer
               h3 Adobe Designer
-          div(class="row")
-            div(class="col-xs-12")
               h3
                 a(href="mailto:tjreddick@gmail.com")
                   i(class="fa fa-envelope-o" aria-hidden="true") 
@@ -58,7 +56,8 @@ block content
                 a(href="http://www.freecodecamp.com/tyquan" target="_blank")
                   i(class="fa fa-trophy")
                 a(href="https://www.youtube.com/channel/UCJlAkRDaMAMS5Mlr3125ZWA")
-                  i(class="fa fa-youtube" aria-hidden="true") 
+                  i(class="fa fa-youtube" aria-hidden="true")
+              br
           div(class="row")
             div(class="col")
               iframe(src="https://www.youtube.com/embed/XO6SV0Mup1E" allowfullscreen="" width="100%" height="225" frameborder="0")
