--- a/views/static/services.pug
+++ b/views/static/services.pug
@@ -7,9 +7,9 @@ block content
       if (services.length > 0)
         each service in services
           div(class="col-md-2")
-            a(href=service.linkUrl target="_blank")
+            a(href="/static/showservice/" + service.id target="_blank")
               center
                 img(src=service.imageUrl id="serviceImage")
-              h3(class="text-center" id="text")= service.title
+              h3(class="text-center" id="text")=service.title
       else
         h1(class="text-center") No Services Added Yet
