--- a/views/static/blogs.pug
+++ b/views/static/blogs.pug
@@ -7,9 +7,9 @@ block content
       if (blogs.length > 0)
         each blog in blogs
           div(class="col-md-2")
-            a(href=blog.linkUrl target="_blank")
+            a(href="/static/showblog/" + blog.id target="_blank")
               center
-                img(src=blog.imageUrl id="serviceImage")
-              h3(class="text-center" id="text")= blog.title
+                img(src=blog.imageUrl class="img-fluid")
+              h3(class="text-center" id="text")=blog.title
       else
         h1(class="text-center") No Blogs Added Yet
