--- a/views/static/showblog.pug
+++ b/views/static/showblog.pug
@@ -9,7 +9,8 @@ block content
           div(class="col-md-12")
             h1(class="text-center")= blog.title
             p(class="text-center")
-              small= blog.date_added
+              small= blog.date_created
+            hr
         div(class="row")
           div(class="col-md-4")
             center
