--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -46,12 +46,12 @@ a {
     height: 150px;
   }
   #nav {
-    background-color: #172C40;
-    color: white;
+    /*background-color: #172C40;*/
+    color: black;
     width: 100%;
   }
   #nav a {
-    color: white;
+    color: black;
   }
   #form-container {
     width: 100%;
@@ -222,7 +222,7 @@ a {
   }
   #courseImage {
     width: 100%;
-    height: 75px;
+    height: 100px;
   }
   #splashLogo {
     font-family: 'Ultra', serif;
@@ -259,7 +259,7 @@ a {
   }
   #projectImage {
     width: 100%;
-    height: 75px;
+    height: 90px;
   }
   #text {
     font-size: 1.5em;
