--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,10 +15,10 @@ html
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous")
     script(src="/js/stats.js")
   body
-    nav(class="navbar navbar-expand-lg" id="nav")
+    nav(class="navbar navbar-expand-lg navbar-light bg-light" id="nav")
       div(class="container")
         a(class="navbar-brand" id="logo" href="/") Tyquan Reddick
-          button(class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
+        button(class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
           span(class="navbar-toggler-icon")
         div(class="collapse navbar-collapse" id="navbarSupportedContent")
           ul(class="navbar-nav mr-auto")
