--- a/views/static/contact.pug
+++ b/views/static/contact.pug
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
   div(id="adminmarg")
-    div(id="form-container")
+    div(class="container")
       div(class="row")
         div(class="col-md-12")
           p(id="messageSent")= trunks
