--- a/views/admin/nav.pug
+++ b/views/admin/nav.pug
@@ -1,20 +1,17 @@
-div(class="container")
-  div(class="row")
-    div(class="col-xs-12")
-      ul(class="nav nav-tabs")
-        li(class="nav-item") 
-          a(class="nav-link" href="/admin/dashboard") Dashboard
-        li(class="nav-item")
-          a(class="nav-link" href="/admin/allusers") Users
-        li(class="nav-item")
-          a(class="nav-link" href="/admin/office") Office
-        li(class="nav-item")
-          a(class="nav-link" href="/admin/allcourses") Courses
-        li(class="nav-item")
-          a(class="nav-link" href="/admin/allprojects") Projects
-        li(class="nav-item")
-          a(class="nav-link" href="/admin/allservices") Services
-        li(class="nav-item")
-          a(class="nav-link" href="/admin/allblogs") Blogs
-        li(class="nav-item")
-          a(class="nav-link" href="/admin/incomingmessages") Messages
+ul(class="nav flex-column")
+  li(class="nav-item") 
+    a(class="nav-link" href="/admin/dashboard") Dashboard
+  li(class="nav-item")
+    a(class="nav-link" href="/admin/allusers") Users
+  li(class="nav-item")
+    a(class="nav-link" href="/admin/office") Office
+  li(class="nav-item")
+    a(class="nav-link" href="/admin/allcourses") Courses
+  li(class="nav-item")
+    a(class="nav-link" href="/admin/allprojects") Projects
+  li(class="nav-item")
+    a(class="nav-link" href="/admin/allservices") Services
+  li(class="nav-item")
+    a(class="nav-link" href="/admin/allblogs") Blogs
+  li(class="nav-item")
+    a(class="nav-link" href="/admin/incomingmessages") Messages
