--- a/views/index.pug
+++ b/views/index.pug
@@ -1,12 +1,13 @@
 extends layout
 
 block content
-  div(class="row")
-    div(class="col-md-12")
-      div(id="worldy")
-        canvas(id="world")
-          p(class="noCanvas") You need a 
-            a(href="http://www.google.com/chrome") modern browser to view this.
-      div(id="bg-stuff")
-        h1 Turn Your Dreams Into a Reality
+  div(id="container")
+    div(class="row")
+      div(class="col-md-12")
+        div(id="worldy")
+          canvas(id="world")
+            p(class="noCanvas") You need a 
+              a(href="http://www.google.com/chrome") modern browser to view this.
+        div(id="bg-stuff")
+          h1 Turn Your Dreams Into a Reality
   script(src="/js/home.js")
