--- a/views/admin/nav.pug
+++ b/views/admin/nav.pug
@@ -1,4 +1,4 @@
-ul(class="nav flex-column")
+ul(class="nav nav-tabs")
   li(class="nav-item") 
     a(class="nav-link" href="/admin/dashboard") Dashboard
   li(class="nav-item")
