--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,7 +17,7 @@ html(lang="en")
         button(class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
           span(class="navbar-toggler-icon")
         div(class="collapse navbar-collapse" id="navbarSupportedContent")
-          ul(class="navbar-nav mr-auto")
+          ul(class="nav nav-fill mr-auto")
               li(class="nav-item")
                 a(class="nav-link" href="/" id="logo")
                   h5 Home
