--- a/views/static/showcourse.pug
+++ b/views/static/showcourse.pug
@@ -2,33 +2,35 @@ extends ../layout
 
 block content
   div(id="marg")
-  div(id="content-container")
-    if (course)
-      div(class="row")
-        div(class="col-md-6")
-          div(id="courseTitleMargin")
-          h1(class="text-center")= course.title
-        div(class="col-md-6")
-          center
-            img(src=course.imageUrl class="img-fluid")
-      hr
-      div(class="row")
-        div(class="col-md-8")
-          h3 Description:
-          p(id="mems")
-            span= course.description
-          br
-        div(class="col-md-4")
-          h3 Price:
-          p(id="mems")
-            span $
-            span= course.price
-          h3 Prerequisites:
-          p(id="mems")
-            span= course.prerequisites
-          h3 Lesson Length:
-          p(id="mems")
-            span= course.lessons
-              span  Lessons
-    else
-      h1(class="text-center") No Courses Added Yet
+  div(class="container")
+    div(id="content-container")
+      if (course)
+        div(class="row")
+          div(class="col-md-8")
+            div(id="courseTitleMargin")
+            h1(class="text-center")= course.title
+          div(class="col-md-4")
+            center
+              img(src=course.imageUrl class="img-fluid")
+        hr
+        div(class="row")
+          div(class="col-md-8")
+            h3 Description:
+            p(id="mems")
+              span= course.description
+            br
+          div(class="col-md-4")
+            h3 Price:
+            p(id="mems")
+              span $
+              span= course.price
+            h3 Prerequisites:
+            p(id="mems")
+              span= course.prerequisites
+            h3 Lesson Length:
+            p(id="mems")
+              span= course.lessons
+                span  Lessons
+      else
+        h1(class="text-center") No Courses Added Yet
+    br
