--- a/views/admin/dashboard.pug
+++ b/views/admin/dashboard.pug
@@ -2,10 +2,10 @@ extends ../layout
 
 block content
   div(id="adminBg")
-    div
-      div(class="col-sm-2")
-        include nav.pug
-      div(class="col-sm-10")
+    include nav.pug
+    br
+    div(class="row")
+      div(class="col-sm-12")
         div(class="container")
           div(class="row")
             div(class="col")
