--- a/views/admin/office.pug
+++ b/views/admin/office.pug
@@ -9,17 +9,18 @@ block content
         div(class="col-md-7")
           div(id="adminVideoContainer")
             video(id="localVideo" autoplay)
-          div(id="callOptions")
-            div(class="row")
-              div(class="col-xs-4")
-                button(id="btn-start") Show Me
-              div(class="col-xs-4")
-                button(id="btn-start") Start Recording
-              div(class="col-xs-4")
-                button(id="btn-stop-recording" disabled="") Stop Recording
+            div(id="callOptions")
+              div(class="row")
+                div(class="col-xs-4")
+                  button(id="btn-start") Show Me
+                div(class="col-xs-4")
+                  button(id="btn-start") Start Recording
+                div(class="col-xs-4")
+                  button(id="btn-stop-recording" disabled="") Stop Recording
+            br
         div(class="col-md-5")
           div(id="textEditor")
-            textarea(class="form-control" placeholder="Enter Javascript Code")
+            textarea(class="form-control" placeholder="Enter Javascript Code" width="100%" height="100%")
           br
           div(id="console")
 
