--- a/views/admin/blogs/blogs.pug
+++ b/views/admin/blogs/blogs.pug
@@ -6,9 +6,9 @@ block content
     div(class="container")
       div(class="row")
         div(class="col-xs-12")
-          h1(class="text-center") Blogs
+          h1(class="text-center") Vlogs
       br
-      a(href="/admin/createblog") Create A Blog
+      a(href="/admin/createblog") Add A New Video
       br
       br
       div("table-responsive")
