--- a/views/admin/nav.pug
+++ b/views/admin/nav.pug
@@ -12,6 +12,8 @@ ul(class="nav nav-tabs")
   li(class="nav-item")
     a(class="nav-link" href="/admin/allservices") Services
   li(class="nav-item")
-    a(class="nav-link" href="/admin/allblogs") Blogs
+    a(class="nav-link" href="/admin/allart") Artwork
+  li(class="nav-item")
+    a(class="nav-link" href="/admin/allblogs") Vlogs
   li(class="nav-item")
     a(class="nav-link" href="/admin/incomingmessages") Messages
