--- a/views/layout.pug
+++ b/views/layout.pug
@@ -32,7 +32,7 @@ html(lang="en")
                   h5 Projects
               li(class="nav-item")
                 a(class="nav-link" href="/static/allblogs" id="logo")
-                  h5 Blog
+                  h5 Vlog
               li(class="nav-item")
                 a(class="nav-link" href="/messages/contact" id="logo")
                   h5 Contact Me
