--- a/views/admin/art/createartwork.pug
+++ b/views/admin/art/createartwork.pug
@@ -13,7 +13,7 @@ block content
         input(class="form-control" type="text" name="title")
         br
         label Image
-        input(class="form-control" type="file" name="art")
+        input(class="form-control" type="text" name="img")
         br
         br
         label Category
