--- a/views/layout.pug
+++ b/views/layout.pug
@@ -34,6 +34,9 @@ html(lang="en")
                 a(class="nav-link" href="/static/allblogs" id="logo")
                   h5 Vlog
               li(class="nav-item")
+                a(class="nav-link" href="/static/gallery" id="logo")
+                  h5 Gallery
+              li(class="nav-item")
                 a(class="nav-link" href="/messages/contact" id="logo")
                   h5 Contact Me
     block content
