--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,9 +3,18 @@ body {
   margin: 0px;
   font-size: 12px;
   font-family: 'Libre Baskerville', serif;
-  background-image: url(../images/main.png);
-  background-repeat: no-repeat;
-  background-position: center;
+}
+#splash {
+  color: white;
+}
+
+footer {
+  background-color: #34495E;
+  color: white;
+  padding-top: 3%;
+}
+
+#logo2 {
   color: white;
 }
 
@@ -192,7 +201,7 @@ a {
   }
   #courseBg {
     width: 100%;
-    height: 600px;
+    height: 400px;
     background-image: url('../images/comp.png');
     background-position: 0;
     background-size: cover;
@@ -209,6 +218,48 @@ a {
   }
   #marg {
     margin-top: 100px;
+  }
+
+  #body {
+    width: 100%;
+    height: 600px;
+    background-image: url(../images/mac.png);
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  #splash {
+    padding-top: 25%;
+  }
+
+  #splash h1 {
+    font-size: 5em;
+  }
+  #margy {
+    margin-top: 20%;
+  }
+
+  #littleMargy {
+    margin-top: 10%;
+    margin-bottom: 5%;
+  }
+
+  #mainImages {
+    width: 80%;
+    height: 200px;
+  }
+
+  #main2Images {
+    width: 100%;
+    height: 200px;
+  }
+
+  #space {
+    margin-top: 5%;
+  }
+
+  #main-profile {
+    width: 100%;
+    height: 400px
   }
 }
 
@@ -309,5 +360,77 @@ a {
   }
   #textEditor {
     margin-top: 0px;
+  }
+}
+
+/* Tablet View */
+@media screen and (min-width: 996px) {
+  #body {
+    width: 100%;
+    height: 735px;
+    background-image: url(../images/mac.png);
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  #projectbody {
+    width: 100%;
+    height: 300px;
+    background-image: url(../images/chat.png);
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  #servicebody {
+    width: 100%;
+    height: 300px;
+    background-image: url(../images/mac.png);
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  #splash {
+    padding-top: 25%;
+  }
+
+  #splash h1 {
+    font-size: 5em;
+  }
+
+  #splash2 {
+    padding-top: 10%;
+    color: white
+  }
+
+  #splash2 h1 {
+    font-size: 5em;
+  }
+
+  #margy {
+    margin-top: 20%;
+  }
+
+  #littleMargy {
+    margin-top: 10%;
+    margin-bottom: 5%;
+  }
+
+  #mainImages {
+    width: 80%;
+    height: 200px;
+  }
+
+  #main2Images {
+    width: 100%;
+    height: 200px;
+  }
+
+  #space {
+    margin-top: 5%;
+  }
+
+  #main-profile {
+    width: 100%;
+    height: 400px
   }
 }
