--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,7 +11,7 @@ html(lang="en")
     link(href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet") 
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    nav(class="navbar navbar-expand-lg navbar-light bg-light" id="nav")
+    nav(class="navbar fixed-top navbar-expand-lg navbar-light bg-light" id="nav")
       div(class="container")
         a(class="navbar-brand" id="logo" href="/") Tyquan Reddick
         button(class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
@@ -40,6 +40,52 @@ html(lang="en")
                 a(class="nav-link" href="/messages/contact" id="logo")
                   h5 Contact Me
     block content
+    footer
+      div(class="container")
+        div(class="row")
+          div(class="col-md-3")
+            h5(class="text-center") Hours and Location
+            hr
+            p Brooklyn, NY
+            p tjreddick@gmail.com
+            p
+              b Open: 8am - 9pm
+            p
+              b Lunch: 1pm - 2pm
+          div(class="col-md-3")
+            h5(class="text-center") Proud Member
+            hr
+            img(class="img-fluid" src="/images/shield_badge.png")
+          div(class="col-md-3")
+            h5(class="text-center") Categories
+            hr
+            a(class="nav-link" href="/" id="logo2")
+              p Home
+            a(class="nav-link" href="/static/allservices" id="logo2")
+              p Services
+            a(class="nav-link" href="/static/allcourses" id="logo2")
+              p Courses
+            a(class="nav-link" href="/static/allprojects" id="logo2")
+              p Projects
+            a(class="nav-link" href="/static/allblogs" id="logo2")
+              p Vlog
+            a(class="nav-link" href="/static/gallery" id="logo2")
+              p Gallery
+            a(class="nav-link" href="/messages/contact" id="logo2")
+              p Contact Me
+          div(class="col-md-3")
+            h5(class="text-center") Latest Post
+            hr
+            p
+              a(href="https://www.youtube.com/watch?v=XO6SV0Mup1E" id="logo2") Undestanding Agents
+            p
+              a(href="https://www.youtube.com/watch?v=XO6SV0Mup1E" id="logo2") Vuejs Full Stack Live Stream
+            p
+              a(href="https://www.youtube.com/watch?v=XO6SV0Mup1E" id="logo2") Meanstack 1.5
+        hr
+        div(class="row")
+          div(class="col-md-12")
+            p(class="text-center") Tyquan Reddick 2017
     script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous")
