--- a/views/index.pug
+++ b/views/index.pug
@@ -16,7 +16,7 @@ block content
         div(class="row")
           div(class="col-sm-4")
             center
-              img(src="images/logo.jpg" id="mainImages")
+              img(src="/images/logo.jpg" id="mainImages")
               div(id="space")
               h3 Logo Design
           div(class="col-sm-4")
