--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -44,7 +44,7 @@ a {
 /* Mobile View */
 @media screen and (min-width: 320px) {
   #adminmarg {
-    margin-top: 5%;
+    padding-top: 5%;
   }
 
   .navbar {
